...

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/text_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:id="@+id/image_weather_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
...

                    <TextView
                        android:id="@+id/text_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_temp_feel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_rain_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_sunrise_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_sunset_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_wind_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_wind_direction"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_cloud_coverage_pct"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/text_humidity_pct"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_hourly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_daily"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
