<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:background="@color/dark_item_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text_1"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Today"/>

    <ImageView
        android:id="@+id/image_weather_day_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:tint="@color/dark_icon_1"
        app:layout_constraintTop_toBottomOf="@id/text_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/forecast_day_sunny"/>

    <ImageView
        android:id="@+id/image_rain_drop"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_wi_raindrop"
        android:backgroundTint="@color/dark_icon_1"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/image_weather_day_icon"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_day_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text_1"
        app:layout_constraintTop_toTopOf="@id/image_rain_drop"
        app:layout_constraintBottom_toBottomOf="@id/image_rain_drop"
        app:layout_constraintStart_toEndOf="@+id/image_rain_drop"
        app:layout_constraintEnd_toEndOf="@id/image_weather_day_icon"
        tools:text="6 mm"/>

    <TextView
        android:id="@+id/text_day_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text_1"
        app:layout_constraintTop_toBottomOf="@id/image_rain_drop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="26\u00B0C"/>

<!--    <View-->
<!--        android:id="@+id/temp_day_range"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/text_day_temp_max"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <TextView
        android:id="@+id/text_day_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_text_1"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_day_temp_max"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="8\u00B0C"/>
</androidx.constraintlayout.widget.ConstraintLayout>